components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef char *PAceBinary;
typedef int __stdcall (*TProgressCallback)(Word usPercent);
typedef int ADSHANDLE;
typedef int ADSIndexArray[50];
typedef ADSIndexArray *PADSIndexArray;
typedef int *PADSHANDLE;
typedef Word *PWord;
typedef short SIGNED16;
typedef Word UNSIGNED16;
typedef int SIGNED32;
typedef __int64 SIGNED64;
typedef unsigned UNSIGNED32;
struct ADS_MGMT_USER_INFO
{
	
public:
	char aucUserName[50];
	Word usConnNumber;
	char aucDictionaryName[50];
	char aucAddress[30];
	char aucOSUserLoginName[50];
	char aucTSAddress[30];
} ;
typedef ADS_MGMT_USER_INFO *pADS_MGMT_USER_INFO;
extern "C" unsigned __stdcall AdsClearAOF(int hTable);
extern "C" unsigned __stdcall AdsEvalAOF(int hTable, char * pucFilter, PWord pusOptLevel);
extern "C" unsigned __stdcall AdsGetAOF(int hTable, char * pucFilter, PWord pusLen);
extern "C" unsigned __stdcall AdsGetAOFOptLevel(int hTable, PWord pusOptLevel, char * pucNonOpt, PWord pusLen);
extern "C" unsigned __stdcall AdsMgGetLockOwner(int hMgmtHandle, char * pucTableName, unsigned ulRecordNumber, pADS_MGMT_USER_INFO pstUserInfo, PWord pusStructSize, PWord pusLockType);
extern "C" unsigned __stdcall AdsMgKillUser(int hMgmtHandle, char * pucUserName, Word usConnNumber);
extern "C" unsigned __stdcall AdsOpenIndex(int hTable, char * pucName, PADSIndexArray ahIndex, PWord pusArrayLen);
extern "C" unsigned __stdcall AdsOpenTable(int hConnect, char * pucName, char * pucAlias, Word usTableType, Word usCharType, Word usLockType, Word usCheckRights, unsigned ulOptions, PADSHANDLE phTable);
extern "C" unsigned __stdcall AdsPackTable(int hTable);
extern "C" unsigned __stdcall AdsRecallRecord(int hTable);
extern "C" unsigned __stdcall AdsRecallAllRecords(int hTable);
extern "C" unsigned __stdcall AdsRefreshAOF(int hTable);
extern "C" unsigned __stdcall AdsRefreshRecord(int hTable);
extern "C" unsigned __stdcall AdsRegisterProgressCallback(TProgressCallback Callback);
extern "C" unsigned __stdcall AdsReindex(int hTable);
extern "C" unsigned __stdcall AdsReindex61(int hTable, unsigned ulPageSize);
extern "C" unsigned __stdcall AdsReindexFTS(int hTable, unsigned ulPageSize);
extern "C" unsigned __stdcall AdsResetConnection(int hConnect);
extern "C" unsigned __stdcall AdsRollbackTransaction(int hConnect);
extern "C" unsigned __stdcall AdsSeek(int hIndex, char * pucKey, Word usKeyLen, Word usDataType, Word usSeekType, PWord pbFound);
extern "C" unsigned __stdcall AdsSeekLast(int hIndex, char * pucKey, Word usKeyLen, Word usDataType, PWord pbFound);
extern "C" unsigned __stdcall AdsSetAOF(int hTable, char * pucFilter, Word usOptions);
extern "C" unsigned __stdcall AdsSetBinary(int hTable, char * pucFldName, Word usBinaryType, unsigned ulTotalLength, unsigned ulOffset, char * pucBuf, unsigned ulLen);
extern "C" unsigned __stdcall AdsSetCollationLang(char * pucLang);
extern "C" unsigned __stdcall AdsSetDate(int hObj, char * pucFldName, char * pucValue, Word usLen);
extern "C" unsigned __stdcall AdsSetDateFormat(char * pucFormat);
extern "C" unsigned __stdcall AdsSetDateFormat60(int hConnect, char * pucFormat);
extern "C" unsigned __stdcall AdsSetDecimals(Word usDecimals);
extern "C" unsigned __stdcall AdsSetDefault(char * pucDefault);
extern "C" unsigned __stdcall AdsSetDouble(int hObj, char * pucFldName, double dValue);
extern "C" unsigned __stdcall AdsSetEmpty(int hObj, char * pucFldName);
extern "C" unsigned __stdcall AdsSetEpoch(Word usCentury);
extern "C" unsigned __stdcall AdsSetExact22(int hObj, Word bExact);
extern "C" unsigned __stdcall AdsSetExact(Word bExact);
extern "C" unsigned __stdcall AdsSetField(int hObj, char * pucFldName, char * pucBuf, unsigned ulLen);
extern "C" unsigned __stdcall AdsSetFilter(int hTable, char * pucFilter);
extern "C" unsigned __stdcall AdsSetHandleLong(int hObj, unsigned ulVal);
extern "C" unsigned __stdcall AdsSetJulian(int hObj, char * pucFldName, int lDate);
extern "C" unsigned __stdcall AdsSetLogical(int hObj, char * pucFldName, Word bValue);
extern "C" unsigned __stdcall AdsSetLong(int hObj, char * pucFldName, int lValue);
extern "C" unsigned __stdcall AdsSetLongLong(int hObj, char * pucFldName, __int64 qValue);
extern "C" unsigned __stdcall AdsSetMilliseconds(int hObj, char * pucFldName, int lTime);
extern "C" unsigned __stdcall AdsSetMoney(int hObj, char * pucFldName, __int64 qValue);
extern "C" unsigned __stdcall AdsSetRecord(int hObj, char * pucRec, unsigned ulLen);
extern "C" unsigned __stdcall AdsSetRelKeyPos(int hIndex, double dPos);
extern "C" unsigned __stdcall AdsSetRelation(int hTableParent, int hIndexChild, char * pucExpr);
extern "C" unsigned __stdcall AdsSetScope(int hIndex, Word usScopeOption, char * pucScope, Word usScopeLen, Word usDataType);
extern "C" unsigned __stdcall AdsSetScopedRelation(int hTableParent, int hIndexChild, char * pucExpr);
extern "C" unsigned __stdcall AdsSetSearchPath(char * pucPath);
extern "C" unsigned __stdcall AdsSetServerType(Word usServerOptions);
extern "C" unsigned __stdcall AdsSetShort(int hObj, char * pucFldName, short sValue);
extern "C" unsigned __stdcall AdsSetString(int hObj, char * pucFldName, char * pucBuf, unsigned ulLen);
extern "C" unsigned __stdcall AdsSetTime(int hObj, char * pucFldName, char * pucValue, Word usLen);
extern "C" unsigned __stdcall AdsShowDeleted(Word bShowDeleted);
extern "C" unsigned __stdcall AdsShowError(char * pucTitle);
extern "C" unsigned __stdcall AdsSkip(int hObj, int lRecs);
extern "C" unsigned __stdcall AdsThreadExit(void);
extern "C" unsigned __stdcall AdsUnlockRecord(int hTable, unsigned ulRec);
extern "C" unsigned __stdcall AdsUnlockTable(int hTable);
extern "C" unsigned __stdcall AdsIsEncryptionEnabled(int hTable, PWord pusIsValid);
extern "C" unsigned __stdcall AdsWriteAllRecords(void);
extern "C" unsigned __stdcall AdsWriteRecord(int hTable);
extern "C" unsigned __stdcall AdsZapTable(int hTable);