components/ads_8.1/ace.pas


   function AdsMgKillUser( hMgmtHandle : ADSHANDLE;
                           pucUserName : PAceChar;
                           usConnNumber : UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetLockOwner( hMgmtHandle : ADSHANDLE;
                               pucTableName : PAceChar;
                               ulRecordNumber: UNSIGNED32;
                               pstUserInfo : pADS_MGMT_USER_INFO;
                               pusStructSize : pWord;
                               pusLockType : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
   { end Management APIs }


   function AdsOpenIndex( hTable:  ADSHANDLE;
                          pucName: PAceChar;
                          ahIndex:  PADSIndexArray;
                          pusArrayLen:  pWord ):  UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsOpenTable( hConnect:  ADSHANDLE;
                          pucName:  PAceChar;
                          pucAlias:  PAceChar;
                          usTableType: Word;
                          usCharType: Word;
                          usLockType: Word;
                          usCheckRights: Word;
                          ulOptions: UNSIGNED32;
                          phTable: pADSHANDLE ):  UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsPackTable( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRecallRecord( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRecallAllRecords( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRefreshRecord( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRegisterProgressCallback( Callback:  TProgressCallback ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsReindex( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsReindex61( hTable: ADSHANDLE;
                          ulPageSize: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsReindexFTS( hTable: ADSHANDLE;
                           ulPageSize: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsResetConnection( hConnect: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRollbackTransaction( hConnect: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSeek( hIndex: ADSHANDLE;
                     pucKey: PAceChar;
                     usKeyLen: Word;
                     usDataType: Word;
                     usSeekType: Word;
                     pbFound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSeekLast( hIndex: ADSHANDLE;
                         pucKey: PAceChar;
                         usKeyLen: Word;
                         usDataType: Word;
                         pbFound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetBinary( hTable: ADSHANDLE;
                          pucFldName: PAceChar;
                          usBinaryType: Word;
                          ulTotalLength: UNSIGNED32;
                          ulOffset:  UNSIGNED32;
                          pucBuf: PAceBinary;
                          ulLen: UNSIGNED32): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetCollationLang( pucLang: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetDate( hObj: ADSHANDLE;
                        pucFldName: PAceChar;
                        pucValue: PAceChar;
                        usLen: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetDateFormat( pucFormat: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetDateFormat60( hConnect: ADSHANDLE;
                                pucFormat: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetDecimals( usDecimals: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetDefault( pucDefault: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsShowDeleted( bShowDeleted: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetDouble( hObj: ADSHANDLE;
                          pucFldName: PAceChar;
                          dValue: Double ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetEmpty( hObj: ADSHANDLE;
                         pucFldName: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetEpoch( usCentury: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetExact( bExact: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetExact22( hObj: ADSHANDLE;
                           bExact: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetField( hObj: ADSHANDLE;
                         pucFldName: PAceChar;
                         pucBuf: PAceChar;
                         ulLen: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetFilter( hTable: ADSHANDLE;
                          pucFilter: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetHandleLong( hObj: ADSHANDLE;
                              ulVal: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetJulian( hObj: ADSHANDLE;
                          pucFldName: PAceChar;
                          lDate: SIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetLogical( hObj: ADSHANDLE;
                           pucFldName: PAceChar;
                           bValue: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetLong( hObj: ADSHANDLE;
                        pucFldName: PAceChar;
                        lValue: SIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$ifdef ADSDELPHI5_OR_NEWER}
   function AdsSetLongLong( hObj: ADSHANDLE;
                            pucFldName: PAceChar;
                            qValue: SIGNED64 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$endif}

   function AdsSetMilliseconds( hObj: ADSHANDLE;
                                pucFldName: PAceChar;
                                lTime: SIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$ifdef ADSDELPHI5_OR_NEWER}
   function AdsSetMoney( hObj: ADSHANDLE;
                         pucFldName: PAceChar;
                         qValue: SIGNED64 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$endif}

   function AdsSetRecord( hObj: ADSHANDLE;
                          pucRec: PAceChar;
                          ulLen: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetRelation( hTableParent: ADSHANDLE;
                            hIndexChild: ADSHANDLE;
                            pucExpr: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetRelKeyPos( hIndex: ADSHANDLE;
                             dPos: DOUBLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetScope( hIndex: ADSHANDLE;
                         usScopeOption: Word;
                         pucScope: PAceChar;
                         usScopeLen: Word;
                         usDataType: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetScopedRelation( hTableParent: ADSHANDLE;
                                  hIndexChild: ADSHANDLE;
                                  pucExpr: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetSearchPath( pucPath: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetServerType ( usServerOptions: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetShort( hObj: ADSHANDLE;
                         pucFldName: PAceChar;
                         sValue: SIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetString( hObj: ADSHANDLE;
                          pucFldName: PAceChar;
                          pucBuf: PAceChar;
                          ulLen: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsShowError( pucTitle: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSkip( hObj: ADSHANDLE;
                     lRecs: SIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsThreadExit: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetTime( hObj: ADSHANDLE;
                        pucFldName: PAceChar;
                        pucValue: PAceChar;
                        usLen: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsUnlockRecord( hTable: ADSHANDLE;
                             ulRec: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsUnlockTable( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsEncryptionEnabled( hTable: ADSHANDLE;
                                    pusIsValid: pWord): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsWriteAllRecords: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsWriteRecord( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsZapTable( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{ AOF functions }
   function AdsSetAOF( hTable: ADSHANDLE;
                       pucFilter: PAceChar;
                       usOptions: UNSIGNED16): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearAOF( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRefreshAOF( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetAOF( hTable: ADSHANDLE;
                       pucFilter: PAceChar;
                       pusLen: pWord): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetAOFOptLevel( hTable: ADSHANDLE;
                               pusOptLevel: pWord;
                               pucNonOpt: PAceChar;
                               pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEvalAOF( hTable: ADSHANDLE;
                        pucFilter: PAceChar;
                        pusOptLevel: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
